third_party/rust/serde_repr/tests/ui/empty_enum.rs
use serde_repr::Serialize_repr;

#[derive(Serialize_repr)]
enum SmallPrime {}

fn main() {}
